# Scorbot-CA

./: .directory  .gitignore_global  .project  LICENSE  Presentazione progetto.pptx  ProjectRefactorRules.xml  README.md
2_boardSystem/V2/SW/0_spi/SpiRasp_demo/: CMakeLists.txt  main.cpp
2_boardSystem/V2/SW/1_uart/01_SpiRasp_demo/: .gitignore  CMakeLists.txt  main.cpp
2_boardSystem/V2/SW/1_uart/DataTransfertPackge/: CMakeLists.txt  DataPrimitive.h
2_boardSystem/V2/SW/1_uart/linuxSide_root/: CMakeLists.txt  Note sperimentali  installingCommand
2_boardSystem/V2/SW/SpiRasp_demo/: .gitignore  CMakeLists.txt  README.md  main.cpp
2_boardSystem/V2/SW/SpiRasp_demo/SPILib/: SpiPack.cpp  SpiPack.h  SpiRaspInterface.cpp  SpiRaspInterface.h
2_boardSystem/V2/SW/SpiRasp_demo/SpiRasp_demo-build/: CMakeCache.txt  Makefile  SpiRasp_Terminal  SpiRasp_Terminal.cbp  SpiRasp_demo.cbp  cmake_install.cmake
4_userInterface/ScorbotUI_cpp/: CMakeLists.txt  DataTransfertPackge  Installation Note  main.cpp
4_userInterface/ScorbotUI_cpp/qwtDoc/qwt-6.1.4/designer/: qwt_designer_plotdialog.cpp  qwt_designer_plotdialog.h  qwt_designer_plugin.cpp
4_userInterface/ScorbotUI_cpp/qwtDoc/qwt-6.1.4/doc/: DoxygenLayout.xml
4_userInterface/ScorbotUI_cpp/qwtDoc/qwt-6.1.4/src/: qwt_abstract_scale.cpp  qwt_abstract_scale.h  qwt_abstract_scale_draw.cpp  qwt_abstract_scale_draw.h  qwt_arrow_button.cpp  qwt_clipper.cpp  qwt_clipper.h  qwt_column_symbol.h  qwt_compass.h  qwt_compass_rose.cpp  qwt_compass_rose.h  qwt_compat.h  qwt_counter.h  qwt_curve_fitter.cpp  qwt_date.cpp  qwt_date.h  qwt_date_scale_draw.h  qwt_date_scale_engine.cpp  qwt_dial.cpp  qwt_dial.h  qwt_dial_needle.h  qwt_dyngrid_layout.cpp  qwt_event_pattern.cpp  qwt_graphic.h  qwt_interval.h  qwt_knob.cpp  qwt_legend.cpp  qwt_legend.h  qwt_legend_data.cpp  qwt_magnifier.cpp  qwt_magnifier.h  qwt_math.cpp  qwt_math.h  qwt_null_paintdevice.cpp  qwt_painter.cpp  qwt_painter.h  qwt_panner.h  qwt_picker.cpp  qwt_picker.h  qwt_picker_machine.h  (+59 more)
4_userInterface/ScorbotUI_cpp/scorbotUi/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  settingBoardWindow.cpp
4_userInterface/ScorbotUI_cpp/scorbotUi/ui_source/: freeMoveWindow.ui  logo.qrc  mainwindow.ui  settingBoardWindow.ui
SW_Source/: CMakeLists.txt  README.md
SW_Source/0_Guide/: Make_newUi_Guide.md  SloeberInstall.md  UI_Compiling_Guide.md  WriteControllScript.md
SW_Source/Common-src/: README.md
SW_Source/Common-src/utilityScorbot/: CMakeLists.txt  ScorCalc.cpp  ScorCalc.h
SW_Source/Scorbot-V2_UI/: CMakeLists.txt  main.cpp
SW_Source/Scorbot-V2_UI/ctrlSrc/: CMakeLists.txt  ctrlSource.cpp  ctrlSource.h
SW_Source/Scorbot-V2_UI/ctrlSrc/pidCtrl/: CMakeLists.txt  PIDScorbot.cpp  PIDScorbot.h
SW_Source/Scorbot-V2_UI/qtScorbotUi/: CMakeLists.txt  QtScorbotUi.cpp  QtScorbotUi.h
SW_Source/Scorbot-V2_UI/qtScorbotUi/UI_useCase/: CMakeLists.txt  DataShow.cpp  DataShow.h  MotorCTRL.cpp  MotorCTRL.h  SetupBoard.cpp  SetupBoard.h  UartConnect.cpp  UartConnect.h  UartConnectExeption.h
SW_Source/Scorbot-V2_UI/qtScorbotUi/UI_useCase/scorbotUi/: CMakeLists.txt  freeMoveWindow.cpp  freeMoveWindow.h  mainwindow.cpp  mainwindow.h  settingBoardWindow.cpp  settingBoardWindow.h  uartChoose.cpp  uartChoose.h
SW_Source/Scorbot-V2_UI/uartSubSystem/: CMakeLists.txt  ConcreteObserver.cpp  ConcreteObserver.h  README.md  ScorInterface.h
SW_Source/Scorbot-V2_UI/uartSubSystem/AdapterClasses/: ComUartAdapter.cpp  ComUartAdapter.h  ObservableScorbot.h  ObserverScorbot.h
SW_Source/Scorbot-V2_UI/uartSubSystem/uartSubSystem_demo/: CMakeLists.txt  README.md  main.cpp
SW_Source/ScoreBoard_Uart_Firmware/: .cproject  .project  CustomCodeDefine.h  README.md  ScoreBoard_Uart.ino  dictionary  excutePack.ino  memoriLoad.ino  motControll.ino  sanityCheck.ino  sloeber.ino.cpp  spec.d  todo.txt
SW_Source/ScoreBoard_Uart_Firmware/Project-lib/: globalDef.h
SW_Source/ScoreBoard_Uart_Firmware/Project-lib/Motor/: DCdriver.cpp  DCdriver.h
SW_Source/ScoreBoard_Uart_Firmware/Project-lib/adcReader/: adcReader.cpp  adcReader.h
SW_Source/ScoreBoard_Uart_Firmware/Project-lib/msEnlib/: msEnlib.cpp  msEnlib.h
SW_Source/ScoreBoard_Uart_Firmware/Project-lib/msEnlib/circular_buffer/: circular_buffer.cpp  circular_buffer.h
SourceCode/1_uartBoardLinux/Common-src/DataTransfertPackge/: CMakeLists.txt  DataFactory.cpp  DataFactory.h  DataPrimitive.h  DataTransfert_AllInclude.h
SourceCode/1_uartBoardLinux/Common-src/DataTransfertPackge/DataManipolation/: AllSensor.cpp  (+10 more)
SourceCode/1_uartBoardLinux/Common-src/circularBuffer/: CMakeLists.txt  CircularBuffer.h
SourceCode/1_uartBoardLinux/Common-src/timeOp/: CMakeLists.txt  timeSpecOp.h  timerSpecOp.cpp
SourceCode/1_uartBoardLinux/Common-src/uartDriver/: CMakeLists.txt  UartDriver.cpp  UartDriver.h  UartException.h
SourceCode/1_uartBoardLinux/linuxSide_root/pcListen_demo/: CMakeLists.txt  main.cpp
SourceCode/2_uiSource/ScorbotUI_cpp/: CMakeLists.txt  ScorbotUI_cpp.pro  main.cpp
SourceCode/2_uiSource/ScorbotUI_cpp/scorbotUi/: CMakeLists.txt  freeMoveWinsow.h  mainwindow.h  settingBoardWindow.h
SourceCode/2_uiSource/ScorbotUI_cpp/src/: CMakeLists.txt  DataTransfertPackge  UtilityScorbot
SourceCode/3_controllSource/2_pidCtrl/: CMakeLists.txt  DataTransfertPackge  main.cpp
SourceCode/3_controllSource/2_pidCtrl/pidCtrl/: CMakeLists.txt  PIDScorbot.cpp
SourceCode/3_controllSource/2_pidCtrl/src/: CMakeLists.txt  Common-src  UartSubSystem
relase/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
relase/PidClass/: PIDScorbot.cpp
relase/ScorbotUI_py/: .gitignore  a.out  main.c  progetto.c  progetto.h
relase/comC/: comC.cpp  comC.h
unionExe/Scorbot-V2/: CMakeLists.txt  boardComSrc  ctrlSrc  main.cpp  uiSrc
unionExe/Scorbot-V2/scorbotMainWindows/: CMakeLists.txt  README.md  ScorbotMainWindows.cpp  ScorbotMainWindows.h  uiSrc
unionExe/Scorbot-V2/scorbotMainWindows/UI_useCase/: CMakeLists.txt  DataShow.cpp  DataShow.h  MotorCTRL.cpp  MotorCTRL.h  SetupBoard.cpp  SetupBoard.h  UartConnect.cpp  UartConnect.h  UartConnectExeption.h  uiSrc
(+2738 files in other folders)
