get_filename_component(exeName ${CMAKE_CURRENT_SOURCE_DIR} NAME)
if (NOT TARGET ${exeName})
    message("--> ${exeName} CmakeLists.txt start include ${exeName} Lib:")
    message("/=====================\\")
    add_subdirectory(uartSubSystem)
    message("\\=====================/")
    message("")
    message("/=====================\\")
    add_subdirectory(ctrlSrc)
    message("\\=====================/")
    message("")
    message("/=====================\\")
    add_subdirectory(qtScorbotUi)
    message("\\=====================/")

    add_executable(${exeName} main.cpp)
    target_link_libraries(${exeName} PUBLIC qtScorbotUi)
    message("Il programma ${exeName}, verrà installato al path: ${CMAKE_INSTALL_PREFIX}")
    install(TARGETS ${exeName} EXPORT ${exeName} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
endif ()
